@@ -51,7 +51,6 @@
         <item>
             <key> <string>_body</string> </key>
             <value> <string>return {\'label\': obj.getTitle(),\n
-        \'value\': obj.getTitle(),\n
         \'description\': obj.getRelativeUrl()}\n
 </string> </value>
         </item>
