@@ -63,10 +63,12 @@ for brain in context.portal_catalog(**kw):\n
   obj = brain.getObject()\n
 \n
   # There may be objects with different Portal Types, so the only way seems\n
-  # to call the script for each object...\n
+  # to call the script for each object... The returned dict should only contains\n
+  # \'label\' (first line displayed) and \'description\' (optional: second line displayed)\n
   result_dict = obj.getTypeBasedMethod(\'getCompletionDict\',\n
                                        fallback_script_id=\'Base_getCompletionDict\')(obj)\n
 \n
+  result_dict[\'value\'] = obj.getProperty(search_catalog_key)\n
   result_dict_list.append(result_dict)\n
 \n
 from json import dumps\n
